# simple_health_checker

./: .env.example  .gitignore  .markdownlint.jsonc  AGENTS.md  LICENSE.txt  README.md  TODO.md  pyproject.toml
.github/workflows/: docs-ci.yml
.opencode/skills/debug/: SKILL.md
.opencode/skills/docs-cleanup/: SKILL.md
.opencode/skills/docs-prep/: SKILL.md
.opencode/skills/implementation-prep/: SKILL.md
.opencode/skills/post-implementation/: SKILL.md
_docs/: documentation_guide.md
_docs/guide/health_checker/: common_use_cases.md  discord_bot_operations.md  health_endpoint_response_examples.md
_docs/reference/health_checker/: architecture_and_commands.md
_docs/standards/: documentation_guidelines.md  documentation_operations.md  jj_workflow.md
_docs/standards/templates/: draft.md  guide.md  intent.md  plan.md  reference.md  survey.md
_docs/survey/health_checker/: performance_baseline_and_optimization_options.md
deploy/systemd/: simple-health-checker.service
scripts/: validate-frontmatter.mjs
src/simple_health_checker/: __init__.py  app.py  config.py  models.py
src/simple_health_checker/discord_ui/: bot.py
src/simple_health_checker/monitoring/: http_checker.py  service.py
src/simple_health_checker/notification/: discord_notifier.py
src/simple_health_checker/repository/: base.py  sqlite.py
tests/: test_discord_bot.py  test_discord_notifier.py  test_monitor_service.py  test_repository_sqlite.py
